# tinyretro

./: .copilot-instructions.md  .env.example  .gitignore  DOCKER.md  LICENSE  Makefile  README.md  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: on_main.yml
client/: .dockerignore  .gitignore  Dockerfile  default.conf  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vitest-setup.js  vitest.config.js
client/coverage/: clover.xml  coverage-final.json  index.html
client/coverage/client/: index.html  svelte.config.js.html  tailwind.config.ts.html
client/coverage/client/src/: index.html  page.ts.html
client/src/: v2.css
client/src/lib/: AddItem.svelte  AddItem.svelte.test.ts  Board.svelte  Board.svelte.test.ts  BoardState.svelte.test.ts  BoardState.svelte.ts  Button.svelte  Button.svelte.test.ts  Item.svelte  Item.svelte.test.ts  Lane.svelte  Lane.svelte.test.ts  RetroBoard.svelte  RetroItem.svelte  RetroItem.svelte.test.ts  RetroLane.svelte  Retrolane.svelte.test.ts  WebsocketWrapper.svelte  WebsocketWrapper.svelte.test.ts  merge-context.ts  v2-theme.test.ts  v2-theme.ts
client/src/lib/__mocks__/: Button.svelte  Item.svelte  MockIcon.svelte  Textarea.svelte
client/src/lib/__tests__/: ButtonWrapper.svelte  ItemWrapper.svelte  (+2 more)
client/src/routes/: +layout.svelte  +page.svelte
server/: .gitignore  Cargo.toml  Dockerfile  cobertura.xml
server/src/: main.rs  retroboard.rs  tofile.rs
(+24 files in other folders)
