[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
axum = { version = "0.8.1", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.26"
